--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,11 +10,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Leva - Sua plataforma de mobilidade"
+      content="Move - Sua plataforma de mobilidade"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Leva</title>
+    <title>Move</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
