--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Move</title>
+    <meta name="audio-allowed" content="true">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
